children to parent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "csrftoken",
         "Formset",
         "formsets",
         "inlineformset",
-        "resequence"
+        "mnode",
+        "resequence",
+        "xhttp"
     ],
     "cSpell.ignoreWords": [
         "Creat",
