--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ django-environ = "*"
 django-verify-email = "*"
 pyyaml = "*"
 djlint = "*"
+django-crispy-forms = "*"
+django-taggit = "*"
+crispy-bootstrap5 = "*"
 
 [dev-packages]
 
