No-subtiles no-formset error fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
     "cSpell.ignoreWords": [
         "Creat",
         "inputype"
+    ],
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "main"
     ]
 }
