--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ crispy-bootstrap5 = "*"
 social-auth-app-django = "*"
 psycopg2-binary = "*"
 gunicorn = "*"
+django-tree-queries = "*"
 
 [dev-packages]
 
