--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "inlineformset",
         "mnode",
         "resequence",
+        "subtiles",
         "xhttp"
     ],
     "cSpell.ignoreWords": [
