--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ django-taggit==4.0.0
 django-tinymce==3.6.1
 django-tree-queries==0.15.0
 Django-Verify-Email==2.0.3
-djlint==1.32.1
+djlint==1.33.0
 EditorConfig==0.12.3
 factory-boy==3.3.0
 Faker==19.6.1
@@ -50,8 +50,9 @@ social-auth-core==4.4.2
 soupsieve==2.4.1
 sqlparse==0.4.4
 tqdm==4.66.1
-typing_extensions==4.7.1
+typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.4
 Werkzeug==2.3.7
+wfastcgi==3.0.0
 whitenoise==6.5.0
