update eb deployment

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,14 @@
+container_commands:
+  01_collectstatic: 
+    command: "source $PYTHONPATH/activate && python manage.py collectstatic --noinput"
+  02_migrate:
+    command: "source $PYTHONPATH/activate && python manage.py migrate --noinput"
+    leader_only: true
+
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: bitedMainProject.wsgi:application
+  "aws:elasticbeanstalk:container:python:staticfiles":
+    "/static/": "/var/www/static/"
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
