eb config update 2

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -8,7 +8,5 @@ container_commands:
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: bitedMainProject.wsgi:application
-  "aws:elasticbeanstalk:container:python:staticfiles":
-    "/static/": "/var/www/static/"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: static
+    /static: "/var/www/static/"
