eb config update 3

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -9,4 +9,4 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: bitedMainProject.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: "/var/www/static/"
+    /static: static
